# DNN-MPPI-MPC

./: .gitignore  README.md  mpc_differential_drive.json  mppi_differential_drive.py  mppi_differential_drive_cuda.py  notes.ipynb  pyproject.toml  requirements.txt
_l4c_generated/: learned_dyn_model.cpp  learned_dynamics_differential_drive.cpp  learned_dynamics_differential_drive_forward.pt  learned_dynamics_differential_drive_hess.pt  learned_dynamics_differential_drive_jacrev.pt
c_generated_code/: Makefile  acados_sim_solver_Differential_Drive_Dynamic.c  acados_sim_solver_Differential_Drive_Dynamic.h  acados_sim_solver_Differential_Drive_Dynamics.c  acados_sim_solver_Differential_Drive_Dynamics.h  acados_sim_solver_Differential_Drive_Static.c  acados_sim_solver_Differential_Drive_Static.h  acados_sim_solver_RaceCarObstacle.c  acados_sim_solver_RaceCarObstacle.h  acados_sim_solver_differential_drive.c  acados_sim_solver_differential_drive_dnn_mpc.c  acados_sim_solver_differential_drive_dnn_mpc.h  acados_sim_solver_differential_drive_dynamics.c  acados_sim_solver_differential_drive_dynamics.h  acados_sim_solver_four_wheel_drive_dynamics.c  acados_sim_solver_four_wheel_drive_dynamics.h  acados_sim_solver_race_car_dynamics.c  acados_sim_solver_race_car_dynamics.h  acados_sim_solver_racecar_dynamics.c  acados_sim_solver_racecar_dynamics.h  acados_sim_solver_wr.c  acados_sim_solver_wr.h  acados_solver.pxd  acados_solver_Differential_Drive_Dynamic.c  acados_solver_Differential_Drive_Dynamic.h  acados_solver_Differential_Drive_Dynamics.c  acados_solver_RaceCarObstacle.c  (+38 more)
(+297 files in other folders)
