[tool.poetry]
name = "rl-mppi-mpc"
version = "0.1.0"
description = "This is library for my thesis 2024 at ITC"
authors = ["SokhengDin <din.sokheng08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
typing-extensions = "4.5.0"
numba = "0.57.1"
numpy = "1.22.0"
scipy = "1.8.0"
matplotlib = "3.5.1"
torch = "1.10.0"
gym = "0.21.0"
pybullet = "3.2.0"
pybulletgym = "0.1.0"
torchvision = "0.11.1"
pandas = "1.4.0"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
