[tool.poetry]
name = "rl-mppi-mpc"
version = "0.1.0"
description = "This is library for my thesis 2024 at ITC"
authors = ["SokhengDin <din.sokheng08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
typing-extensions = "4.5.0"
numba = "0.59.1"
numpy = "1.26.4"
scipy = "1.13.1"
matplotlib = "3.9.0"
torch = "2.0.1"
gym = "0.26.2"
pybullet = "3.2.6"
torchvision = "0.15.2"
pandas = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
